Change .timeago color and align notification, fix #4502

--- a/app/assets/stylesheets/bootstrap-headerfix.sass
+++ b/app/assets/stylesheets/bootstrap-headerfix.sass
@@ -32,8 +32,6 @@ header
     .notification_element
       font-size: 13px
       .timeago
-        color: #aaa
-        text-decoration: none
         border: medium none
         cursor: text
       .unread-setter
